kubernetes/vault/components/openshift/egress-firewall.yaml
---
apiVersion: k8s.ovn.org/v1
kind: EgressFirewall
metadata:
  name: default
  namespace: vault
spec:
  egress:
    # Control Plane
    - type: Allow
      to:
        nodeSelector:
          matchLabels:
            node-role.kubernetes.io/control-plane: ""
    # MicroShift
    - type: Allow
      to:
        cidrSelector: 10.101.1.7/32
    - type: Allow
      to:
        dnsName: microshift.arthurvardevanyan.com
    # Google Range
    # https://support.google.com/a/answer/10026322?hl=en
    # https://www.gstatic.com/ipranges/goog.json
    - type: Allow
      to:
        dnsName: kms.googleapis.com
    - type: Allow
      to:
        dnsName: sts.googleapis.com
    - type: Allow
      to:
        cidrSelector: 142.250.0.0/15
    - type: Allow
      to:
        cidrSelector: 172.217.0.0/16
    - type: Allow
      to:
        cidrSelector: 172.253.0.0/16
    - type: Allow
      to:
        cidrSelector: 173.194.0.0/16
    - type: Allow
      to:
        cidrSelector: 216.58.192.0/19
    - type: Allow
      to:
        cidrSelector: 74.125.0.0/16
    - type: Allow
      to:
        cidrSelector: 108.177.0.0/17
    - type: Allow
      to:
        cidrSelector: 209.85.128.0/17
    - type: Allow
      to:
        cidrSelector: 64.233.160.0/19
    - type: Allow
      to:
        cidrSelector: 216.239.32.0/19
    - type: Allow
      to:
        cidrSelector: 192.178.0.0/15
    - type: Deny
      to:
        cidrSelector: 0.0.0.0/0
